--- a/notebooks/EDA.ipynb
+++ b/notebooks/EDA.ipynb
@@ -44,7 +44,9 @@
     "vehicle_type_fig = None\n",
     "price_dist_fig = None\n",
     "top_5_manufacturers_cylinder_fig = None\n",
-    "price_range_fig = None"
+    "price_range_fig = None\n",
+    "top_5_vehicle_types_volume_fig = None\n",
+    "top_5_vehicle_types_revenue_fig = None"
    ]
   },
   {
@@ -101,6 +103,13 @@
     "\n",
     "    # Replace NaN with False and non-NaN with True in the 'is_4wd' column\n",
     "    df['is_4wd'] = df['is_4wd'].notna()\n",
+    "    \n",
+    "    # Several empty cells exist. Filling This fills missing values in the 'cylinders','odometer' and 'model_year' column with the \n",
+    "    # corresponding median 'cylinders','odometer' and 'model_year' value within each group of the 'type' column.\n",
+    "    \n",
+    "    df['cylinders'] = df[['cylinders', 'type']].groupby('type').transform(lambda x:x.fillna(x.median()))\n",
+    "    df['odometer'] = df[['odometer', 'type']].groupby('type').transform(lambda x:x.fillna(x.median()))\n",
+    "    df['model_year'] = df[['model_year', 'type']].groupby('type').transform(lambda x:x.fillna(x.median()))\n",
     "\n",
     "    # Remove all rows with any NaN values\n",
     "    df = df.dropna()\n",
@@ -124,7 +133,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 62,
+   "execution_count": 80,
    "id": "a0d379db-b859-4fd6-ad33-ba8385c442a5",
    "metadata": {},
    "outputs": [],
@@ -135,6 +144,8 @@
     "    global price_dist_fig\n",
     "    global top_5_manufacturers_cylinder_fig\n",
     "    global price_range_fig\n",
+    "    global top_5_vehicle_types_volume_fig\n",
+    "    global top_5_vehicle_types_revenue_fig\n",
     "\n",
     "    # >>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>\n",
     "    # Sales by cylinder count >>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>\n",
@@ -233,6 +244,9 @@
     "                                                   xaxis_tickangle=-45)\n",
     "\n",
     "\n",
+    "    # >>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>\n",
+    "    # Top 5 Manufacturers based on most popular cylinders >>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>\n",
+    "\n",
     "    # number of cars sold by price ranges\n",
     "    # Define the price bins and labels\n",
     "    price_bins = [0, 10000, 20000, 30000, 40000, 50000, 60000]\n",
@@ -259,6 +273,46 @@
     "    \n",
     "    # Update layout to rotate x-axis labels and adjust size\n",
     "    price_range_fig.update_layout(xaxis_tickangle=-45, width=800, height=600)\n",
+    "\n",
+    "    \n",
+    "\n",
+    "    # >>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>\n",
+    "    # Top 5 Vehicle types sold (volume) >>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>\n",
+    "    \n",
+    "    # Group by vehicle type and count the number of vehicles sold\n",
+    "    vehicle_type_counts = df['type'].value_counts().nlargest(5)\n",
+    "\n",
+    "    # Create a DataFrame from the value counts\n",
+    "    vehicle_type_df = vehicle_type_counts.reset_index()\n",
+    "    vehicle_type_df.columns = ['Vehicle Type', 'Number of Vehicles Sold']\n",
+    "\n",
+    "    # Create the pie chart using Plotly\n",
+    "    top_5_vehicle_types_volume_fig = px.pie(vehicle_type_df, \n",
+    "                 names='Vehicle Type', \n",
+    "                 values='Number of Vehicles Sold', \n",
+    "                 title='Top 5 Vehicle Types Sold',\n",
+    "                 color_discrete_sequence=px.colors.qualitative.Set3)\n",
+    "\n",
+    "    \n",
+    "\n",
+    "    # >>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>\n",
+    "    # Top 5 Vehicle types sold (revenue) >>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>\n",
+    "    \n",
+    "\n",
+    "    # Group by vehicle type and calculate the total sales revenue\n",
+    "    revenue_by_vehicle_type = df.groupby('type')['price'].sum().nlargest(5)\n",
+    "\n",
+    "    # Create a DataFrame from the grouped data\n",
+    "    vehicle_type_revenue_df = revenue_by_vehicle_type.reset_index()\n",
+    "    vehicle_type_revenue_df.columns = ['Vehicle Type', 'Total Sales Revenue']\n",
+    "\n",
+    "    # Create the pie chart using Plotly\n",
+    "    top_5_vehicle_types_revenue_fig = px.pie(vehicle_type_revenue_df, \n",
+    "                 names='Vehicle Type', \n",
+    "                 values='Total Sales Revenue', \n",
+    "                 title='Top 5 Vehicle Types by Sales Revenue',\n",
+    "                 color_discrete_sequence=px.colors.qualitative.Set3)\n",
+    "\n",
     "\n",
     "    return\n"
    ]
@@ -372,6 +426,30 @@
     "def get_price_range_fig():\n",
     "    global price_range_fig\n",
     "    return price_range_fig"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "39a0e2b9-62b0-428c-b150-85d1fb0ec7ac",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def get_top_5_vehicle_types_volume():\n",
+    "    global top_5_vehicle_types_volume_fig\n",
+    "    return top_5_vehicle_types_volume_fig"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "8a9189a3-4e62-4e67-9f51-46abb96800e7",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def get_top_5_vehicle_types_revenue():\n",
+    "    global top_5_vehicle_types_revenue_fig\n",
+    "    return top_5_vehicle_types_revenue_fig"
    ]
   }
  ],
