--- a/notebooks/EDA.ipynb
+++ b/notebooks/EDA.ipynb
@@ -2,12 +2,20 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "id": "e9e56c0d-cac1-4b07-b996-b1c977f648bd",
    "metadata": {},
    "outputs": [],
    "source": [
     "# EDA.py"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "231adf18-841d-4d52-81c7-d10807eac775",
+   "metadata": {},
+   "source": [
+    "## Import Libraries"
    ]
   },
   {
@@ -30,6 +38,14 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "a86f8674-6931-43b7-b4c1-8542143bb2e1",
+   "metadata": {},
+   "source": [
+    "## Initializing global variables. They are made global to allow access to multiple functions."
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 3,
    "id": "99e90663-f08e-4d2f-86fc-c858387e54a1",
@@ -47,6 +63,14 @@
     "price_range_fig = None\n",
     "top_5_vehicle_types_volume_fig = None\n",
     "top_5_vehicle_types_revenue_fig = None"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "719e1813-15af-4cf2-a0fb-1b7ec3805a38",
+   "metadata": {},
+   "source": [
+    "## Loading the data. This code ensures that the data file is accessed via its relative path"
    ]
   },
   {
@@ -80,6 +104,14 @@
     "            df_loaded = \"File not found\"\n",
     "    return df_loaded\n",
     "\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "78fbb7da-e32c-4ad5-9cc7-7e0b1178166a",
+   "metadata": {},
+   "source": [
+    "## Cleaning data"
    ]
   },
   {
@@ -132,8 +164,16 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "43264fc5-8aa3-4bc7-bf83-c256cc07b631",
+   "metadata": {},
+   "source": [
+    "## Data Analysis and charting functions"
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": 80,
+   "execution_count": 6,
    "id": "a0d379db-b859-4fd6-ad33-ba8385c442a5",
    "metadata": {},
    "outputs": [],
@@ -318,6 +358,22 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "3481ee3b-d0bb-4264-9ca3-bc5a06284cff",
+   "metadata": {},
+   "source": [
+    "## Public functions"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "ae1996f2-05ed-4978-b975-dd6b38105963",
+   "metadata": {},
+   "source": [
+    "These functions are used by the frontend application (app.py) to access and display the charts, tables and calculations."
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 7,
    "id": "24a0216e-64e6-4ca1-90fe-47f3fba3f2d5",
@@ -382,7 +438,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 12,
    "id": "1cd6b836-43c1-46f5-8114-4618d61d88e2",
    "metadata": {},
    "outputs": [],
@@ -394,7 +450,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 13,
    "id": "f03bca31-a6dd-4bf2-9014-71e7743d1da5",
    "metadata": {},
    "outputs": [],
@@ -406,7 +462,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 14,
    "id": "a729488a-59d7-4ccd-8867-ad9c9ed629ee",
    "metadata": {},
    "outputs": [],
@@ -418,7 +474,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 15,
    "id": "6c1db8dc-bef6-4b2a-a282-072571e5e538",
    "metadata": {},
    "outputs": [],
@@ -430,7 +486,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 16,
    "id": "39a0e2b9-62b0-428c-b150-85d1fb0ec7ac",
    "metadata": {},
    "outputs": [],
@@ -442,7 +498,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 17,
    "id": "8a9189a3-4e62-4e67-9f51-46abb96800e7",
    "metadata": {},
    "outputs": [],
